// Copyright 2024 Eryx <evorui at gmail dot com>, All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package lynkapi;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/lynkdb/lynkapi/go/lynkapi;lynkapi";

// import "google/protobuf/descriptor.proto";
import "google/protobuf/struct.proto";

// extend google.protobuf.FieldOptions {
//   string attrs = 70000;
// }

message SpecField {
  // unique name
  string name = 1;  // `x_attrs:"primary_key,name_identifier"`

  // tag name from StructTag
  string tag_name = 2;

  // value type
  string type = 4;

  // struct defines url, ex: github.com/lynkdb/lynkapi/lynkapi.ServiceInstance
  string kind = 5;

  //
  repeated string attrs = 6;

  //
  repeated string enums = 7;

  //
  map<string, google.protobuf.Value> opts = 8;

  //
  repeated SpecField fields = 9;

  // description
  string desc = 10;

  // int32 bytes_length = 11;  // int(8,16,32,64), uint(8,16,32,64),
  // float(32,64) repeated int32 decimal_size = 12;  // [precision, scale]
}

message Spec {
  string kind = 1;
  string name = 2;  // `x_attrs:"name_identifier"`

  repeated SpecField fields = 9;
}
